made fixed the text under the map, was able to collapse the sunshine request section & edited styling on temporary instructions

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,8 @@ a{
 }
 
 #introduction-section{
-    font-family: 'Source Sans Pro';
+/* uncommented because it is overriding the body font of Poppins */
+    /* font-family: 'Source Sans Pro'; */
     margin: 0 auto;
     padding: 2em 2em 10em 10em;
     background-color: #ffb446;
